[package]
name = "romdrop"
version = "0.1.0"
authors = ["Matt Baker <matthew.reiss.baker@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.2"
actix-http = "1.0"
actix-multipart = "0.2"
actix-web = "2.0"
actix-rt = "1.0"
bytes = "0.5"
handlebars = "3.4"
env_logger = "0.7"
sanitize-filename = "0.2"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["full"] }
